--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "leetc-rust"
 version = "0.1.0"
-authors = ["殷鹏 <yinpeng06@meituan.com>"]
+authors = ["keithyin <yinpenghhz@hotmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
